# convolve

./: .gitignore  CMakeLists.txt  Makefile  README.md  convolve  convolve.cpp  log.txt  profilev1.0.txt  profilev2.0.txt
convolve.dSYM/Contents/Resources/DWARF/: convolve
convolve.dSYM/Contents/Resources/Relocations/aarch64/: convolve.yml
src/: CMakeLists.txt  Convolver.cpp  Convolver.h  WavData.cpp  WavData.h  WavFile.cpp  WavFile.h  WavHeader.cpp  WavHeader.h  convolve.cpp  main.cpp
tests/: CMakeLists.txt  audiodiff.py  tests.cpp
